# nft

./: .gitignore  Dockerfile  README.md  fly.toml
backend/: pyproject.toml  requirements_full.txt
backend/app/: auth.py  database.py  db_models.py  main.py  models.py  wallet_auth.py  xrpl_service.py
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/components/: WalletConnectModal.tsx
frontend/src/pages/: AdminDashboard.tsx  AdminLogin.tsx  HomePage.tsx
frontend/src/services/: api.ts  walletAdapters.ts  xaman.ts
